feat: 상품 생성 기능 구현

--- a/com.sparta.msa_exam.product/src/main/resources/application.yml
+++ b/com.sparta.msa_exam.product/src/main/resources/application.yml
@@ -2,6 +2,26 @@ spring:
   application:
     name: product-service
 
+  profiles:
+    active: dev
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      username: default
+      password: systempass
+
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+
 server:
   port: 19093
 
@@ -9,3 +29,28 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/msa_practice
+    username: root
+    password: pass!
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
