feat - gateway 공통 응답 필터 정의 및 기존의 interceptor 제거 - JwtAuthenticationFilter 구현을 통한 service 인증 필터 적용

--- a/com.sparta.msa_exam.gateway/src/main/resources/application.yml
+++ b/com.sparta.msa_exam.gateway/src/main/resources/application.yml
@@ -2,9 +2,39 @@ spring:
   application:
     name: gateway
 
+  profiles:
+    include: jwt
+
   cloud:
     gateway:
       routes:
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/**
+            - Method=POST
+
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/**
+            - Method=GET
+          filters:
+            - JwtAuthenticationFilter
+
+        - id: product-service
+          uri: lb://product-service
+          predicates:
+            - Path=/products/**
+          filters:
+            - JwtAuthenticationFilter
+
+        - id: order-service
+          uri: lb://order-service
+          predicates:
+            - Path=/orders/**
+          filters:
+            - JwtAuthenticationFilter
 
 server:
   port: 19091
