--- a/com.sparta.msa_exam.auth/src/main/resources/application.yml
+++ b/com.sparta.msa_exam.auth/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
 
   profiles:
     active: dev
+    include: jwt
 
   jpa:
     open-in-view: false
@@ -20,7 +21,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: http://localhost:19090/eureka
 
 ---
 spring:
